force-app/main/default/objects/Cluster__c/Cluster__c.object-meta.xml
<CustomObject>
    <!---->
    <description>Criação de cluster (agrupamento) para realizar notificações aos clientes</description>
    <label>Cluster</label>
    <nameField>
        <label>Nome do cluster</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clusters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>