force-app/main/default/objects/Cluster__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <label>Término</label>
    <required>true</required>
    <type>Date</type>
</CustomField>