force-app/main/default/objects/Cluster__c/fields/IsContact__c.field-meta.xml
<CustomField>
    <fullName>IsContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informar Contato?</label>
    <type>Checkbox</type>
</CustomField>