force-app/main/default/objects/Cluster__c/fields/IsHolder__c.field-meta.xml
<CustomField>
    <fullName>IsHolder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informar Titular?</label>
    <type>Checkbox</type>
</CustomField>