force-app/main/default/objects/Cluster__c/fields/IsTerceiro__c.field-meta.xml
<CustomField>
    <fullName>IsTerceiro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informar Terceiro?</label>
    <type>Checkbox</type>
</CustomField>