force-app/main/default/objects/Cluster__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Mensagem visualizada pelo usuario</description>
    <label>Mensagem</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>