force-app/main/default/objects/Cluster__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Técnico</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Contas</fullName>
            </value>
            <value>
                <fullName>Retenção</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Desconto</fullName>
                <isActive>false</isActive>
                <label>Desconto</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>