force-app/main/default/objects/Cluster__c/validationRules/EndDatePreviousToday.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDatePreviousToday</fullName>
    <active>true</active>
    <description>A data de término não pode ser anterior à data atual.</description>
    <errorConditionFormula>End__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>End__c</errorDisplayField>
    <errorMessage>A data de término ser maior que a data atual.</errorMessage>
</ValidationRule>