force-app/main/default/objects/Cluster__c/validationRules/StartDatePreviousEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDatePreviousEndDate</fullName>
    <active>true</active>
    <description>A data de início deve ser anterior à data de término.</description>
    <errorConditionFormula>End__c &lt; Start__c</errorConditionFormula>
    <errorDisplayField>Start__c</errorDisplayField>
    <errorMessage>A data de início deve ser anterior à data de término.</errorMessage>
</ValidationRule>