force-app/main/default/objects/Cluster__c/listViews/Clusters.listView-meta.xml
<ListView>
    <fullName>Clusters</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Clusters</label>
</ListView>